--- a/client/package.json
+++ b/client/package.json
@@ -8,32 +8,33 @@
     "dev": "webpack serve"
   },
   "dependencies": {
-    "ice": "^3.7.100",
-    "serve": "^14.2.5",
     "axios": "^1.7.9",
-    "path": "0.12.7",
-    "url": "0.11.4",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "ice": "^3.7.100",
     "lucide-react": "0.554.0",
+    "next": "16.0.3",
+    "path": "0.12.7",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "serve": "^14.2.5",
     "tailwind-merge": "3.4.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "url": "0.11.4"
   },
   "devDependencies": {
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.3",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
+    "@types/node": "24.10.1",
     "@types/react": "19.2.6",
     "@types/react-dom": "19.2.3",
-    "@types/node": "24.10.1",
+    "copy-webpack-plugin": "^13.0.1",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "postcss": "8.5.6",
+    "style-loader": "^4.0.0",
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
-    "postcss": "8.5.6"
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
